@@ -27,6 +27,12 @@ cod-tools (unreleased)
     - COD::CIF::Data::EstimateZ:
       - the cif_estimate_z() subroutine now accepts optional parameters
         that override the data values provided in the CIF data block.
+    - COD::Spacegroups::Lookup::COD:
+      - renaming space group 'P 1 (-a,-b+c,b+c)' to 'A 1';
+      - renaming space group 'P 1 (-a+c,-b,a+c)' to 'B 1';
+      - renaming space group 'P 1 (b+c,a+c,a+b)' to 'I 1';
+      - replacing the Hall space group symbol with a shorter one for
+        space groups from the extra_settings hash.
   * Removed:
     - cif_cod_check:
       - unused COD::CIF::Tags::Manage::tag_is_empty() import.
